# RimLoc

./: .gitignore  .gitmessage.txt  .mailmap  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  commitmsg.txt  mkdocs.yml  release-plz.toml  release.toml  requirements-docs.txt  rimloc.toml
.githooks/: commit-msg
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/codeql/: codeql-config.yml
.github/workflows/: changelog-check.yml  codeql.yml  docs.yml  public-api.yml  publish.yml  release-dev-auto.yml  release-dev.yml  release-plz.yml  schema-check.yml  semver.yml
crates/rimloc-cli/: Cargo.toml  README.md  build.rs  i18n.toml
crates/rimloc-cli/i18n/en/: rimloc-tests.ftl  rimloc.ftl
crates/rimloc-cli/i18n/ru/: rimloc-tests.ftl  rimloc.ftl
crates/rimloc-cli/src/: main.rs  placeholders.rs  po.rs  ui.rs  version.rs
crates/rimloc-cli/src/commands/: annotate.rs  build_mod.rs  diff_xml.rs  export_po.rs  import_po.rs  init.rs  lang_update.rs  learn_defs.rs  learn_patches.rs  mod.rs  morph.rs  scan.rs  schema.rs  validate.rs  xml_health.rs
crates/rimloc-cli/tests/: build_mod_from_root_versions.rs  cli_integration.rs  def_injected_pipeline.rs  defs_dir.rs  helpers.rs  i18n_keys.rs  import_only_diff.rs  morph_dummy.rs  morph_pymorphy2.rs  snapshots.rs  snapshots_defs.rs  tests_i18n.rs  xml_health.rs
crates/rimloc-cli/tests/snapshots/: snapshots__snapshot_help_en.snap  snapshots__snapshot_help_en.snap.new  snapshots__snapshot_scan_json.snap  snapshots__snapshot_scan_json.snap.new  snapshots__snapshot_validate_json.snap  snapshots__snapshot_validate_json.snap.new  snapshots_defs__snapshot_diff_defs_only_json.snap  snapshots_defs__snapshot_scan_defs_only_json.snap  snapshots_defs__snapshot_validate_defs_only_json.snap
crates/rimloc-config/: Cargo.toml
crates/rimloc-config/src/: lib.rs
crates/rimloc-core/: Cargo.toml  README.md
crates/rimloc-core/src/: lib.rs
crates/rimloc-domain/: Cargo.toml
crates/rimloc-domain/src/: lib.rs
crates/rimloc-export-csv/: Cargo.toml  README.md
crates/rimloc-export-csv/src/: lib.rs
crates/rimloc-export-po/: Cargo.toml  README.md
crates/rimloc-export-po/src/: lib.rs
crates/rimloc-import-po/: Cargo.toml  README.md
crates/rimloc-import-po/src/: lib.rs
crates/rimloc-parsers-xml/: Cargo.toml  README.md
crates/rimloc-parsers-xml/assets/: defs_fields.json
crates/rimloc-parsers-xml/src/: lib.rs
crates/rimloc-plugin-api/: Cargo.toml
crates/rimloc-plugin-api/src/: lib.rs
crates/rimloc-plugin-jsonftl/: Cargo.toml
crates/rimloc-plugin-jsonftl/src/: lib.rs
crates/rimloc-services/: Cargo.toml
crates/rimloc-services/src/: build.rs  export.rs  import.rs  lib.rs  plugins.rs  scan.rs  util.rs  validate.rs
crates/rimloc-services/src/extras/: annotate.rs  diff.rs  init.rs  lang_update.rs  mod.rs  morph.rs  xml_health.rs
crates/rimloc-services/src/learn/: dict.rs  export.rs  keyed.rs  ml.rs  mod.rs  parser.rs  patches.rs
crates/rimloc-validate/: Cargo.toml  README.md
crates/rimloc-validate/src/: lib.rs
docs/assets/schemas/: annotate_plan.schema.json  diff_output.schema.json  health_report.schema.json  import_summary.schema.json  scan_unit.schema.json  validation_msg.schema.json
docs/en/: faq.md  getting-started.md  glossary.md  index.md  install.md  install_run.md  learn.md  testing.md  tips.md  troubleshooting.md
docs/en/cli/: annotate.md  build_mod.md  diff_xml.md  export_import.md  index.md  init.md  lang_update.md  morph.md  scan.md  validate.md  validate_po.md  xml_health.md
docs/en/community/: discord.md  issues.md  localization.md  pull_requests.md  support.md  translate_cli.md
docs/en/dev/: index.md  plugins.md
docs/en/guide/: configuration.md  gui.md  placeholders.md  po_files.md  translators.md
docs/en/tutorials/: export_po.md  translate_mod.md  update_translations.md
docs/overrides/: main.html
docs/readme/: README.ru.md
docs/readme/ru/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  gitmessage.txt
docs/ru/: faq.md  getting-started.md  glossary.md  index.md  install.md  install_run.md  learn.md  testing.md  tips.md  troubleshooting.md
docs/ru/cli/: annotate.md  build_mod.md  diff_xml.md  export_import.md  index.md  init.md  lang_update.md  morph.md  scan.md  validate.md  validate_po.md  xml_health.md
docs/ru/community/: discord.md  issues.md  localization.md  pull_requests.md  support.md  translate_cli.md
docs/ru/dev/: index.md
docs/ru/guide/: configuration.md  gui.md  placeholders.md  po_files.md  translators.md
docs/ru/tutorials/: export_po.md  translate_mod.md  update_translations.md
gui/tauri-app/frontend/: index.html  index.js  styles.css
gui/tauri-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
gui/tauri-app/src-tauri/capabilities/: default.json
gui/tauri-app/src-tauri/icons/: icon.icns
gui/tauri-app/src-tauri/permissions/: allow-commands.json
gui/tauri-app/src-tauri/src/: main.rs  tests.rs
scripts/: agent-begin.sh  agent-commit.sh  agent-context.sh  agent-ensure-commit.sh  agent-mark-change.sh  check-changelog.sh  check_i18n.py  setup-git-hooks.sh
scripts/pymorphy2_local/: README.md  app.py  requirements.txt
test/: bad.po  import_only_diff.po  ok.po  test-en-winrefs.po  test-en.po
test/DefInjectedOnly/Defs/ThingDefs_Items/: Food.xml
test/DefInjectedOnly/Languages/Russian/DefInjected/ThingDef/: Food.xml
test/DefInjectedOnly/_learn/: suggested.xml
test/DefsOnly/Defs/ThingDefs_Items/: Apparel.xml
test/DefsOnly/Languages/Russian/DefInjected/ThingDef/: Apparel.xml
test/MixedMod/Defs/ThingDefs_Items/: Weapons.xml
test/MixedMod/Languages/English/Keyed/: Base.xml
test/MixedMod/Languages/Russian/DefInjected/ThingDef/: Weapons.xml
test/MixedMod/Languages/Russian/Keyed/: Base.xml
test/TestMod/About/: About.xml
test/TestMod/Languages/English/DefInjected/ThingDef/: Apparel.xml
test/TestMod/Languages/Spain/Keyed/: Bad.xml
