[workspace]
resolver = "2"
members = [
    "crates/rimloc-core",
    "crates/rimloc-parsers-xml",
    "crates/rimloc-export-csv",
    "crates/rimloc-export-po",
    "crates/rimloc-cli",
    "crates/rimloc-validate",
    "crates/rimloc-import-po",
    "crates/rimloc-services",
    "crates/rimloc-domain",
    "crates/rimloc-config",
]

[workspace.package]
edition = "2021"
license = "GNU GPL"
authors = ["Daniel Viktorovich"]

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
roxmltree = "0.20" # удобный read-only XML парсер
quick-xml = "0.36" # оставим для будущего потокового парсинга
csv = "1"
clap = { version = "4", features = ["derive"] }
color-eyre = { version = "0.6", features = ["capture-spantrace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
once_cell = "1"
regex = "1"
schemars = { version = "0.8", features = ["schemars_derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
zip = "0.6"
tempfile = "3"
