[package]
name = "rimloc-cli"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
color-eyre = { workspace = true }
walkdir = { workspace = true }
owo-colors = "4"
rimloc-core = { path = "../rimloc-core" }
rimloc-parsers-xml = { path = "../rimloc-parsers-xml" }
rimloc-export-csv = { path = "../rimloc-export-csv" }
rimloc-export-po = { path = "../rimloc-export-po" }
rimloc-validate = { path = "../rimloc-validate" }
rimloc-import-po = { path = "../rimloc-import-po" }
regex = "1"
