[package]
name = "rimloc-cli"
version = "0.0.1"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
color-eyre = { version = "0.6", features = ["capture-spantrace"] }
walkdir = { workspace = true }
owo-colors = "4"
rimloc-core = { path = "../rimloc-core" }
rimloc-parsers-xml = { path = "../rimloc-parsers-xml" }
rimloc-export-csv = { path = "../rimloc-export-csv" }
rimloc-export-po = { path = "../rimloc-export-po" }
rimloc-validate = { path = "../rimloc-validate" }
rimloc-import-po = { path = "../rimloc-import-po" }
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
tracing-error = "0.2"
once_cell = "1"
i18n-embed = { version = "0.16", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.10"
unic-langid = "0.9"
rust-embed = { version = "8.7", features = ["include-exclude"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
cargo-emit = "0.2"

[package.metadata.i18n]
# This section documents the i18n workflow for contributors.
# It is not used by the compiler; it’s here for easy discovery.
readme_notes = """
RimLoc uses the Fluent + i18n-embed + rust-embed stack.
- Translations live under `i18n/{lang}/rimloc.ftl` (and `rimloc-tests.ftl` for tests).
- Add new messages by adding Fluent keys; keep `en` as the source of truth.
- Run `cargo i18n` (if installed) to validate structure.
- Binary embeds all FTL files at build time via rust-embed.
"""
