[package]
name = "rimloc-export-csv"
version = "0.1.0"
edition = "2021"
description = "CSV exporter for RimLoc toolkit"
license = "GPL-3.0-only"
repository = "https://github.com/0-danielviktorovich-0/RimLoc"
documentation = "https://0-danielviktorovich-0.github.io/RimLoc/"
keywords = ["csv", "export", "localization"]
categories = ["command-line-utilities"]
readme = "README.md"
include = [
  "Cargo.toml",
  "README.md",
  "LICENSE*",
  "src/**"
]


[dependencies]
csv = { workspace = true }
color-eyre = { workspace = true }
rimloc-core = { version = "0.1.0", path = "../rimloc-core" }
