[package]
name = "rimloc-parsers-xml"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "XML ingestion and parsing for RimWorld localization data (RimLoc)"
license = "GPL-3.0-only"
repository = "https://github.com/0-danielviktorovich-0/RimLoc"
documentation = "https://0-danielviktorovich-0.github.io/RimLoc/"
keywords = ["rimworld", "xml", "localization", "parser"]
categories = ["parsing"]
readme = "README.md"
include = [
  "Cargo.toml",
  "README.md",
  "LICENSE*",
  "src/**"
]


[dependencies]
walkdir = { workspace = true }
quick-xml = { workspace = true }
rimloc-core = { version = "0.1.0", path = "../rimloc-core" }
tempfile = "3"
tracing = "0.1"
color-eyre = "0.6"
roxmltree = { workspace = true }
