[package]
name = "rimloc-services"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = { workspace = true }
rimloc-core = { version = "0.1.0", path = "../rimloc-core" }
rimloc-parsers-xml = { version = "0.1.0", path = "../rimloc-parsers-xml" }
rimloc-validate = { version = "0.1.0", path = "../rimloc-validate" }
rimloc-export-po = { version = "0.1.0", path = "../rimloc-export-po" }
rimloc-import-po = { version = "0.1.0", path = "../rimloc-import-po" }
regex = "1"
quick-xml = { workspace = true }
walkdir = { workspace = true }
once_cell = { workspace = true }
