[package]
name = "rimloc-validate"
version = "0.1.0-dev.0"
edition = "2021"
description = "Validation helpers for RimLoc to catch duplicates/placeholders issues"
license = "GPL-3.0-only"
repository = "https://github.com/0-danielviktorovich-0/RimLoc"
documentation = "https://0-danielviktorovich-0.github.io/RimLoc/"
keywords = ["validation", "localization", "rimworld"]
categories = ["command-line-utilities"]

[dependencies]
regex = "1"
rimloc-core = { version = "0.1.0-dev.0", path = "../rimloc-core" }
color-eyre = { workspace = true }
