[package]
name = "rimloc-gui"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }
image = "0.24"
ico = "0.3"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
thiserror = "1"
rimloc-services = { path = "../../../crates/rimloc-services" }
rimloc-domain = { path = "../../../crates/rimloc-domain" }
rimloc-import-po = { path = "../../../crates/rimloc-import-po" }
rimloc-export-csv = { path = "../../../crates/rimloc-export-csv" }
color-eyre = "0.6"
walkdir = "2"
dirs = "5"
once_cell = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
